# fluffy-spoon

./: .gitignore  CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/core/: canvas.cpp  canvas.hpp  input_event.cpp  input_event.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/scene/: main_scene.cpp  main_scene.hpp
src/ui/: sprite.cpp  sprite.hpp  text.hpp  triangle.cpp  triangle.hpp
